k8s/nexterm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexterm-service
  namespace: nexterm
spec:
  selector:
    app: nexterm
  ports:
    - port: 80
      targetPort: 6989
  type: ClusterIP
